# competitor-inbox

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  DECISIONS.md  LICENSE  PLAN.md  README.md  SCHEMA.md  START-HERE.md  config.example  pyproject.toml
scripts/: fresh_install_test.py  privacy_audit.py  validate_package.py
src/competitor_inbox/: __init__.py  aggregate.py  analysis.py  cli.py  config.py  coverage.py  creative_gallery.py  dashboard.py  dedupe.py  demo.py  keychain.py  locking.py  parser.py  pipeline.py  sanitize.py  schedule.py  schema.py  store.py
src/competitor_inbox/sources/: __init__.py  imap.py  mbox.py
tests/: test_analysis.py  test_creative_gallery.py  test_dashboard.py  test_ingestion.py  test_packaging.py  test_pipeline_cli.py  test_privacy.py  test_privacy_hardening.py
