[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-inbox"
version = "1.0.1"
description = "Build a private strategy dashboard from competitor marketing emails you already receive."
readme = "START-HERE.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zach Schieffer" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ai = ["anthropic>=0.69"]

[project.scripts]
competitor-inbox = "competitor_inbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
